--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,16 @@
 .App-link {
   color: #09d3ac;
 }
+
+ /* #circle1{
+  height: 10px;
+   background-color:#B04835;
+    width:10px;
+     border-radius: 10px;
+      margin-top: 13px;
+       margin-Left:5px;
+} 
+#heading1{
+  margin-Left:30px;
+   margin-Top:-25px;
+} */
