done with everything

--- a/src/components/timesheetcomponents/styles/vendor.css
+++ b/src/components/timesheetcomponents/styles/vendor.css
@@ -197,7 +197,7 @@
 .timesheet__overlay-project {
   text-transform: uppercase;
   font-size: 14px;
-  color: #ddd;
+  color: #0f1473;
   font-size: 14px;
   margin-top: 0;
 }
